<resources>
    <string name="app_name">DemoAppkotlin</string>
    <string name="custom_toast_text">All Done</string>
    <string name="android_ui_button">New Button</string>
    <string name="basic_kotlin_gender_textview">Gender:-</string>
    <string name="relative_layout_heading">Enter Feedback</string>
    <string name="checkbox_layout_text">Would You like to Give an Email Response</string>
    <string name="edittext_basic_kotlin">Enter Name</string>
    <string name="edittext_email_basic_kotlin">Enter Email</string>
    <string name="edittxt_enter_phone">Enter Phone</string>
    <string name="tv_grid_layout">Hello</string>
    <string name="tv_different_types_of_layout">Different Types of Layout</string>
    <string name="title_registration_form">Registration Form</string>
    <string name="toast_normal">Moving Towards new Activity</string>
    <string name="txt_switch">Switch</string>
    <string name="title_toolbar">Layout Screen</string>
    <string name="all_toast_btn">Android Ui &amp; All Toasts</string>
    <string name="android_btn">Android UI</string>
    <string name="radiobtn_male">Male</string>
    <string name="radiobtn_female">Female</string>
    <string name="textview_pref">Your Prefrences</string>
    <string name="checkbox_kotlin">Kotlin</string>
    <string name="checkbox_ios">IOS</string>
    <string name="checkbox_angular">Angular Js</string>
    <string name="btn_submit">Submit</string>
    <string name="custom_Toast_Text">All Done</string>
    <string name="android_Ui_Button">New Button</string>
    <string name="Basic_kotlin_gender_textview">Gender:-</string>
    <string name="relative_layout_btn">Relative Layout</string>
    <string name="linear_layout_btn">Linear Layout</string>
    <string name="constraint_layout_btn">Constraint Layout</string>
    <string name="e_mail_hint">Your E-mail</string>
    <string name="name_hint">Your Name</string>
    <string name="dropdown_text">Select</string>
    <string name="multiline_hint">Feedback details</string>
    <string name="different_layout_btn">Different Layouts</string>
    <string name="Relative_layout_heading">Enter Feedback</string>
    <string name="checkboxLayoutText">Would You like to Give an Email Response</string>
    <string name="send_feedback_btn">Send Feedback</string>
    <string name="grid_layout_btn">Grid Layout</string>
    <string name="frame_layout_textView">This is the Symbol of Commute</string>
    <string name="frame_layout_btn">Frame Layout</string>
    <string name="edit_text_basic_kotlin">Enter Name</string>
    <string name="edit_text_email_basic_kotlin">Enter Email</string>
    <string name="recycler_view_btn">List View &amp; Recycler View</string>
    <string-array name="options">
        <item>Android</item>
        <item>kotlin</item>
        <item>Swift</item>
        <item>Mongo</item>
    </string-array>
    <string-array name="fruitNames">
        <item name="fruits">Apple</item>
        <item name="fruits">Mango</item>
        <item name="fruits">Banana</item>
        <item name="fruits">Kiwi</item>
        <item name="fruits">Dragon Fruit</item>
        <item name="fruits">Olive</item>
        <item name="fruits">Guava</item>
        <item name="fruits">Pappaya</item>
        <item name="fruits">Mosambi</item>
        <item name="fruits">green Apple</item>
        <item name="fruits">WaterMelon</item>
        <item name="fruits">Grapes</item>
        <item name="fruits">Jack Fruit</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtView_Myfavourite_Fragment">My Favourites</string>
    <string name="txtview_child_expandable">Topic\'s List</string>
    <string name="item_expandable_header">Chapter\'s List</string>
    <string name="btn_expandable_recycler_view">Expandable Recycler View</string>
    <string name="btn_expandable_list_view">Expandable List View</string>
    <string name="btn_simple_list_view">List View1</string>
    <string name="btn_list_view_with_array">List View with Array</string>
    <string name="btn_list_view_with_custom_layout">List View with Custom Layout</string>
    <string name="btn_recycler_view">Recycler View</string>
    <string name="btn_recycler_view_with_grid_layout">Recycler View With grid Layout</string>
    <string name="btn_view_pager">View Pager</string>
    <string name="btn_view_pager_2">View Pager Two</string>
    <string name="btn_bottom_navigation">Bottom Navigation</string>
    <string name="btn_view_pager_with_recycler_adapter">View Pager with Recycler Adapter</string>
    <string name="tv_custom_list_layout_title">Title</string>
    <string name="tv_custom_list_view_desc">Description</string>
    <string name="tv_recent_fragment">Recent Fragment</string>
    <string name="tv_expandable_recycler_view">Java is an Object Oriented Programming language. Java is used in all kind of applications like Mobile Applications (Android is Java based) desktop applications, web applications, client server applications, enterprise applications and many more.</string>
    <string name="tv_item_recycler_view">Hello</string>
    <string name="tv_item_recycler_view_grid_layout">Title</string>
    <string name="tv_ietm_recycler_view_grid_layout">Desc</string>
    <string name="title_toolbar_layout">Layout Screen</string>
    <string name="tv_registration_form">Registration Form</string>
    <string name="edittxt_registration_form">Enter Phone</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_my_profile">My Profile</string>
    <string name="title_expandable_recycler_view">Expandable Recycler View</string>
    <string name="title_expandable_list_view">Expandable List View</string>
    <string name="title_swipable_list_view">Swipable List view</string>
    <string name="title_bottom_navigation">Bottom Navigation</string>
    <string name="title_view_pager_two">Tab Layout with ViewPager 2</string>
    <string name="title_view_pager">Tab Layout With View Pager</string>
    <string name="title_recycler_view_grid_layout">Recycler View With Grid layout</string>
    <string name="title_recycler_view">Recycler View With Adapter Class</string>
    <string name="title_custom_list_view">Custom List View With Adapter</string>
    <string name="title_list_view">Simple List View With Array</string>
    <string name="title_simple_list_view">Simple List View</string>
    <string name="title_list_view_activity">List View Activity</string>
    <string name="btn_list_view_and_recycler_view">List View And Recycler View</string>
    <string name="tv_first_fragment">First Fragment</string>
    <string name="tab_title_recent">Recent</string>
    <string name="tab_title_myFavourite">My Favourite</string>
    <string name="tab_title_viewpager_two">Hello</string>
    <string name="tab_myfavourite_viewpager_two">My Favourites</string>
    <string name="tab_jay_viewpager_two">Jay</string>
    <string name="tab_dhruv_viewpager_two">Dhruv</string>
    <string name="title_android_expandable_recycler_view">Android</string>
    <string name="desc_android_expandable_recycler_view">Java is an Object Oriented Programming language. Java is used in all kind of applications like Mobile Applications (Android is Java based) desktop applications, web applications, client server applications, enterprise applications and many more.</string>
    <string name="title_larvel_expandable_recycler_view">larvel</string>
    <string name="title_mongodb_expandable_recycler_view">Mongo DB</string>
    <string name="title_swift_expandable_recycler_view">Swift</string>
    <string name="title_kotlin_expandable_recycler_view">Kotlin</string>
    <string name="title_people_recycler_view_with_grid_layout">People</string>
    <string name="btn_fragment_one">Fragment 1</string>
    <string name="btn_fragment_two">Fragment 2</string>
    <string name="btn_activity_lifecycle">Activity LifeCycle</string>
    <string name="btn_implicit_intent">Implicit Intent</string>
    <string name="btn_data_passing_activity">Data Passing Activity</string>
    <string name="btn_take_photo">Take Photo</string>
    <string name="hint_write_anything">Write Anything</string>
    <string name="label_putextra">Extra</string>
    <string name="image_type">image/*</string>
    <string name="btn_signup_page">SignUp Page</string>
    <string name="btn_login_page">Login Page</string>
    <string name="btn_webview">WebView</string>
    <string name="label_horizontal_scroll_view">Horizontal Scroll View</string>
    <string name="hint_search_bar">Search Here</string>
    <string name="label_view_message">My Favorite</string>
    <string name="label_add_message">Add Message Fragment</string>
    <string name="label_gallery_fragment">Gallery Fragment</string>
    <string name="btn_next_fragment">Next Fragment</string>
    <string name="btn_jetpack_navigation_activity">JetPack Navigation</string>
    <string name="key_implicit_intent">Key</string>
    <string name="textview_welcome">Welcome,</string>
    <string name="textview_forgot_password">Forgot Password?</string>
    <string name="btn_login_screen_with_api">Login Screen With Api</string>
    <string name="hint_your_password">Your Password</string>
    <string name="textView_create_a_new_user">Create A New User</string>
    <string name="hint_your_job">Your Job</string>
    <string name="textView_please_wait">Please Wait ...</string>
    <string name="tv_mvc_architecture">MVC Architecture</string>
    <string name="btn_mvc_architecture">MVC Architecture</string>
    <string name="tv_movie_name">Movie Name</string>
    <string name="btn_mvvm_architecture">MVVM Architecture</string>
    <string name="hint_your_username">Your Username</string>
    <string name="btn_display">Display</string>
    <string name="tv_show_email">Show Email</string>
    <string name="tv_show_username">Show UserName</string>
    <string name="toast_permission_granted">All Permission Granted</string>
    <string name="toast_permission_not_granted">Permission not granted</string>
    <string name="btn_alert_positive_btn">App Settings</string>
    <string name="btn_alert_negative">Cancel</string>
    <string name="title_alert_dialog">Permission Denied</string>
    <string name="message_dialog">Permission is denied, Please allow permissions from App Settings.</string>
    <string name="btn_design_support">Design Support</string>
    <string name="btn_coordinator_layout">Coordinator Layout</string>
</resources>