<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".differentLayout.LinearLayoutActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewEnterFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:text="@string/relative_layout_heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/text_color_hint" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/layout_elements_background"
        android:hint="@string/name_hint"
        android:padding="15dp"
        android:textColorHint="@color/text_color_hint" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/layout_elements_background"
        android:hint="@string/e_mail_hint"
        android:padding="15dp"
        android:textColorHint="@color/text_color_hint" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/spinner_background"
        android:entries="@array/option"
        android:padding="25dp" />

    <androidx.appcompat.widget.AppCompatEditText
        style="?android:attr/spinnerItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/layout_elements_background"
        android:gravity="start"
        android:hint="@string/multiline_hint"
        android:lines="4"
        android:maxLines="4"
        android:padding="25dp"
        android:textColorHint="@color/text_color_hint" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:buttonTint="@color/light_grey"
        android:padding="12dp"
        android:text="@string/checkbox_layout_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/light_grey" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/layout_elements_background"
        android:padding="13dp"
        android:text="@string/send_feedback_btn"
        android:textAllCaps="false" />

</androidx.appcompat.widget.LinearLayoutCompat>